[gd_scene load_steps=3 format=3 uid="uid://da24mkqsd76g8"]

[ext_resource type="Script" path="res://Objects/Launcher/launcher.gd" id="1_1nm7e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1teya"]
size = Vector2(32, 10)

[node name="launcher" type="Area2D"]
script = ExtResource("1_1nm7e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1teya")

[node name="timeout_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="launch_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="timeout_timer" to="." method="_on_timeout_timer_timeout"]
[connection signal="timeout" from="launch_timer" to="." method="_on_launch_timer_timeout"]
